# boopmark

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  install.sh  justfile  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
__create/: index.ts
cli/: Cargo.toml
migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_api_keys.sql  004_create_bookmarks.sql  (+4 more)
server/: Cargo.toml
server/examples/: hash_password.rs
server/src/: config.rs  main.rs
server/src/adapters/: anthropic.rs  anthropic_tag_consolidator.rs  mod.rs  scraper.rs  screenshot.rs
server/src/adapters/login/: google.rs  local_password.rs  mod.rs
server/src/adapters/metadata/: fallback.rs  html.rs  iframely.rs  mod.rs  opengraph_io.rs
server/src/adapters/postgres/: api_key_repo.rs  bookmark_repo.rs  invite_repo.rs  llm_settings_repo.rs  mod.rs  session_repo.rs  user_repo.rs
server/src/adapters/screenshot/: mod.rs  noop.rs  playwright.rs
server/src/adapters/storage/: local.rs  s3.rs
server/src/app/: auth.rs  bookmarks.rs  enrichment.rs  invite.rs  mod.rs  secrets.rs  settings.rs  tag_consolidation.rs
server/src/domain/: bookmark.rs  error.rs  invite.rs  llm_settings.rs  mod.rs  transfer.rs  user.rs
server/src/domain/ports/: api_key_repo.rs  bookmark_repo.rs  invite_repo.rs  llm_enricher.rs  llm_settings_repo.rs  login_provider.rs  metadata.rs  mod.rs  screenshot.rs  session_repo.rs  storage.rs  tag_consolidator.rs  user_repo.rs
server/src/web/: extractors.rs  mod.rs  router.rs  state.rs
server/src/web/api/: auth.rs  bookmarks.rs  image_fix.rs  mod.rs  transfer.rs
server/src/web/middleware/: api_error_json.rs  auth.rs  mod.rs
server/src/web/pages/: admin.rs  auth.rs  auth_shared.rs  bookmarks.rs  invite.rs  mod.rs  settings.rs  shared.rs
(+123 files in other folders)
