[workspace]
members = ["server", "cli"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
askama = "0.12"
askama_axum = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
aws-sdk-s3 = "1"
aws-config = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
url = "2"
clap = { version = "4", features = ["derive"] }
tabled = "0.17"
toml = "0.8"
dirs = "6"
sha2 = "0.10"
trait-variant = "0.1"
