[package]
name = "boopmark-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
sqlx.workspace = true
askama.workspace = true
askama_axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
scraper.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
tower.workspace = true
tower-http.workspace = true
argon2.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
thiserror.workspace = true
url.workspace = true
sha2.workspace = true
trait-variant.workspace = true
base64 = "0.22"
ring = "0.17"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
